# flask-basic-template

./: LICENCE.md  README.md  main.py  pyproject.toml
static/: index.css
templates/: index.html
